# projekt_inf2

./: CMakeLists.txt  LICENSE  README.md  bonus.cpp  bonus.h  bonus_easymode.cpp  bonus_easymode.h  bonus_paletka.cpp  bonus_paletka.h  bonus_pilka.cpp  bonus_pilka.h  brick.h  game.cpp  game.h  gamestate.cpp  gamestate.h  main.cpp  menu.cpp  menu.h  paletka.h  pilka.h
